--- a/app/view/pc/styles/register.scss
+++ b/app/view/pc/styles/register.scss
@@ -112,6 +112,10 @@ $t-hover-color: #ee534e;
                 }
             }
         }
+
+        .register-step2 {
+            display: none;
+        }
     }
 }
 
