--- a/app/view/pc/styles/index.scss
+++ b/app/view/pc/styles/index.scss
@@ -17,6 +17,8 @@ $t-hover-color: #ee534e;
         position: relative;
 
         .logo-img {
+            display: block;
+            
             margin-left: 50px;
             width: 150px;
             line-height: 50px;
