--- a/app/view/pc/styles/login.scss
+++ b/app/view/pc/styles/login.scss
@@ -89,6 +89,8 @@ $t-hover-color: #ee534e;
                     }
 
                     .login-link{
+                        margin-top: 10px;
+                        
                         padding-left: 10px;
                         
                         color: #fff;
