--- a/app/view/pc/styles/activity_detail.scss
+++ b/app/view/pc/styles/activity_detail.scss
@@ -56,6 +56,9 @@ $t-hover-color: #ee534e;
                     width: 150px;
                     height: 50px;
 
+                    line-height: 50px;
+                    text-align: center;
+
                     background-color: $main-color;
                 }
     
@@ -63,6 +66,9 @@ $t-hover-color: #ee534e;
                     margin-left: 30px;
                     width: 150px;
                     height: 50px;
+
+                    line-height: 50px;
+                    text-align: center;
 
                     background-color: $gray-color;
                 }
