--- a/app/view/pc/styles/index.scss
+++ b/app/view/pc/styles/index.scss
@@ -5,6 +5,10 @@ $gray-color: #5e6468;
 $t-hover-color: #ee534e;
 
 .header {
+    // position: fixed;
+    // top: 0;
+
+    width: 100%;
     height: 60px;
 
     font-size: 20px;
@@ -19,13 +23,13 @@ $t-hover-color: #ee534e;
         .logo-img {
             display: block;
             
-            margin-left: 50px;
-            width: 150px;
-            line-height: 50px;
+            margin-left: 100px;
+            width: 160px;
+            line-height: 55px;
 
             .img {
-                width: 60px;
-                height: 60px;
+                width: 155px;
+                height: 50px;
             }
         }
 
